# display-auto-rotator

./: LICENSE  README.md  boot.py  code.py  pyproject.toml
MyLibraryA.pretty/: MMA7361LC_module.kicad_mod
display-auto-rotator_3dp/: chars.stl  cover.stl
display-auto-rotator_pcb/: display-auto-rotator.kicad_pcb  display-auto-rotator.kicad_prl  display-auto-rotator.kicad_pro  display-auto-rotator.kicad_sch
display-auto-rotator_pcb/MyLibrary.pretty/: MMA7361LC_module.kicad_mod
src/display_auto_rotator/: main.py
